--- a/Lessons/02_Lab_Intro_DataFrame.Rmd
+++ b/Lessons/02_Lab_Intro_DataFrame.Rmd
@@ -15,6 +15,8 @@ A **data frame** is used for storing data tables. It a list a vector of equal le
 
 When we import data to R, data frame is the preferred way for storing the data because columns can have different modes (character, numeric, integer, logical, complex).
 
+##data frame can have values of different nature, e.g. numbers and characters, compared to a matrix that can only have one type of values
+##need to have the same number of rows
 
 ## Data frame built-in example
 
@@ -69,7 +71,7 @@ How could you add columns to *df_car_speed*?
 car_dist <- cars$dist
 
 #Option 1
-df <- cbind(df_car_speed,car_dist)  #similarly rows could be added using rbind()
+df <- cbind(df_car_speed,car_dist)  #similarly rows could be added using rbind() #only works if same number of rows
 class(df)
 df
 
@@ -111,8 +113,9 @@ summary(df)
 head(df) #show the first 6 rows of df
 
 #If you know the number of the column you want you can refer to that to access column
-df[,1]
+df[,1] #after comma is columns #before comma is rows 
 
+df_2<-df[1:10,1:2]
 #you could also use this notation to delete columns
 df <- df[,-2]
 df
