--- a/Lessons/07_Lab_TimeSeries.Rmd
+++ b/Lessons/07_Lab_TimeSeries.Rmd
@@ -81,16 +81,28 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 ```{r}
 
 #Exercise 5: Check if there is any missing data for both temperature and rainfall series.
+summary(BRA_complete$Rainfall)
 
-
+summary(BRA_complete$Temperature_C)
 
 
 #Exercise 6: Plot both series over time on separate plots. Add a trend line using geom_smooth(). Can you say something about the trend just by visualizing the data?
 
+#Rainfall
+ggplot(BRA_complete) +
+  geom_line(aes(y = Rainfall, x = Date),  size = 0.25) +
+  geom_smooth(aes(y = Rainfall, x = Date), color = "#c13d75ff")
 
+#or
 
+ggplot(BRA_complete, aes(x=Date, y=Rainfall)) +
+  geom_line() +
+  geom_smooth(method = "lm")
 
-
+#Temperature
+ggplot(BRA_complete, aes(x=Date, y=Temperature_C)) +
+  geom_line() +
+  geom_smooth(method = "lm")
 
 ```
 
@@ -99,7 +111,24 @@ BRA_complete <- inner_join(Rainfall_BR_processed,Temp_BR_processed)
 ```{r}
 #Exercise 7: Create a time series objects for each series using ts(). Make sure you specify the starting point and frequency.
 
+#Generic version
 
+fmonth<- month(first(BRA_complete$Date))
+fyear<- year(first(BRA_complete$Date))
+
+
+Rainfall_ts <- ts(Rainfall_BR_processed$Rainfall, start = c(fyear,fmonth), frequency = 12)
+Temp_ts <- ts(Temp_BR_processed$Temperature_C, start = c(fyear,fmonth), frequency = 12)
+
+#or 
+
+Rainfall_ts <- ts(Rainfall_BR_processed$Rainfall, start = c(1901,1), frequency = 12)
+
+plot(Rainfall_ts)
+
+Temp_ts <- ts(Temp_BR_processed$Temperature_C, start = c(1901,1), frequency = 12)
+
+plot(Temp_ts)
 
 ```
 
@@ -121,22 +150,39 @@ The `stl` function decomposes the time series object into its component parts. W
 # Exercise 8: Use the stl() function to decompose both series. 
 # Visualize the decomposed series using plot(). What components can you identify?
 
+Rainfall_stl <- stl(Rainfall_ts, s.window = "periodic")
 
+plot(Rainfall_stl)
 
+Temp_stl <- stl(Temp_ts, s.window = "periodic")
 
-
+plot(Temp_stl)
 
 # Exercise 9: Use the times series object generated with the stl() to extract the 
-# components of each series and turn them into data frames.
+# components of each series and turn them into data frames.#because output of decomposition is time series data
+
+Rainfall_Components <- as.data.frame(Rainfall_stl$time.series[,1:3])
+
+Rainfall_Components <- mutate(Rainfall_Components,
+        Observed = BRA_complete$Rainfall,     
+        Date = BRA_complete$Date)
 
 
+Temp_Components <- as.data.frame(Temp_stl$time.series[,1:3])
 
-
-
+Temp_Components <- mutate(Temp_Components,
+        Observed = BRA_complete$Temperature_C,     
+        Date = BRA_complete$Date)
 
 # Exercise 10: Visualize how the trend maps onto the data for both series
+ggplot(Rainfall_Components) +
+  geom_line(aes(y = Observed, x = Date),  size = 0.25) +
+  geom_line(aes(y = trend, x = Date), color = "#c13d75ff") 
 
-
+ggplot(Temp_Components) +
+  geom_line(aes(y = Observed, x = Date),  size = 0.25) +
+  geom_line(aes(y = trend, x = Date), color = "#c13d75ff") +
+  geom_hline(yintercept = 0, lty = 2)
 
 
 
